tests/errors/maskr_negative.f90
program example
   print*, maskr(-24)
end
